ndb - bug#46873 - small bug in previous bug-fix